<resources>
    <string name="app_name">asucourses</string>

    <!--Strings for the login Activity-->
    <string name="LoginLogo">Login</string>
    <string name="EmailHint">Email</string>
    <string name="PassHint">Password</string>
    <string name="SignInBtn">Sign in</string>
    <string name="notRegTextView">not registered yet ? sign up now</string>
    <string name="SignUpBtn">Sign up</string>

    <!--Strings for the sign up Activity-->
    <string name="fullNameHint">Full Name</string>
    <string name="confirmPasswordHit">Confirm Password</string>
    <string name="levelHint">Level</string>
    <string name="gpaHint">GPA</string>
    <string name="registerBtn">Register</string>




    <string name="allBtn">ALL</string>
    <string name="buildingEngineeringBtn">Building Engineering</string>
    <string name="communicationSystemsEngineeringBtn">Communication Systems Engineering</string>
    <string name="computerEngineeringBtn">Computer Engineering and Software Systems</string>
    <string name="energyEngineeringBtn">Energy and Renewable Energy Engineering</string>
    <string name="environmentalArchitectureBtn">Environmental Architecture and Urbanism</string>
    <string name="humanitiesBtn">Humanities</string>
    <string name="landscapeArchitectureBtn">Landscape Architecture</string>
    <string name="manufacturingEngineeringBtn">Manufacturing Engineering</string>
    <string name="materialsEngineeringBtn">Materials Engineering</string>
    <string name="mechatronicsEngineeringBtn">Mechatronics Engineering and Automation</string>

    <!--Strings for Menu Items-->
    <string name="menu_item_my_courses_text">My Courses</string>
    <string name="menu_item_login_text">Login</string>
</resources>
