<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginLogo"
            android:layout_marginTop="55dp"
            android:textSize="22sp"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/EmailEditText"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailHint"
            android:textSize="22sp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/PasswordEditText"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:hint="@string/PassHint"
            android:inputType="textPassword"
            />
        <Button
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/SignInBtn"
            android:id="@+id/SignInBtn"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/notRegTextView"/>
        <Button
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUpBtn"
            android:id="@+id/SignUpBtn"
            />
    </LinearLayout>

</ScrollView>